[gd_scene load_steps=2 format=3 uid="uid://bimnaw1faew57"]

[ext_resource type="Script" path="res://Script/start_screen.gd" id="1_hbmwd"]

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hbmwd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.0
offset_top = -42.0
offset_right = 157.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="WorldSize" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "World Size:"

[node name="inputWorldSize" type="LineEdit" parent="VBoxContainer/WorldSize"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -219.0
offset_top = -15.5
offset_right = 1.0
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
text = "100"

[node name="TileSize" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Tile Size:"

[node name="inputTileSize" type="LineEdit" parent="VBoxContainer/TileSize"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
text = "64"

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = 100.0
offset_right = 75.0
offset_bottom = 200.0
grow_horizontal = 2
text = "Survive The System"

[node name="Title2" type="Label" parent="Title"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = 40.0
offset_right = 75.0
offset_bottom = 140.0
grow_horizontal = 2
text = "World Element Prototype Version 1.0 + Life system in devlopement"

[node name="Credits" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -100.0
offset_right = 75.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
text = "Developped by Bulbi & Kyun"

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="text_changed" from="VBoxContainer/WorldSize/inputWorldSize" to="." method="_on_input_world_size_text_changed"]
[connection signal="text_changed" from="VBoxContainer/TileSize/inputTileSize" to="." method="_on_input_tile_size_text_changed"]
